reproducible: html_packages: add some <span class="avoidwrap"> to help the browser decide where to wrap the line, avoiding uglinesses like this word

--- a/userContent/static/style.css
+++ b/userContent/static/style.css
@@ -304,6 +304,7 @@ span.red { color: red; }
 span.purple { color: purple; }
 span.green { color: green; }
 span.dangerous { color: orange; }
+span.avoidwrap { display: inline-block; }
 
 @media all and (max-width: 641px) {
 	body {
